# craftec-core

./: Cargo.toml  Cargo.toml.bak
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: governance.rs  host_fns.rs  lib.rs  lifecycle.rs  observe.rs  permissions.rs  sandbox.rs
crates/agent-runtime/tests/: integration.rs
crates/aggregator/: Cargo.toml
crates/aggregator/src/: batch.rs  collector.rs  lib.rs  poster.rs  service.rs  tests.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encrypt.rs  keys.rs  lib.rs  sign.rs
crates/distribution-guest/: Cargo.toml
crates/distribution-guest/src/: main.rs
crates/erasure/: Cargo.toml
crates/erasure/src/: chunker.rs  gf256.rs  homomorphic.rs  lib.rs  segmenter.rs
crates/identity/: Cargo.toml
crates/identity/src/: did.rs  document.rs  identity.rs  lib.rs  reputation.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs  namespace.rs  protocol.rs  server.rs  ws.rs
crates/keystore/: Cargo.toml
crates/keystore/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  bootstrap.rs  error.rs  lib.rs  node.rs  pex.rs  pex_wire.rs  shared.rs  wire.rs
crates/prover/: Cargo.toml  build.rs
crates/prover-guest-types/: Cargo.toml
crates/prover-guest-types/src/: lib.rs
crates/prover/src/: lib.rs  merkle.rs  tests.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: accounts.rs  fee.rs  instruction.rs  lib.rs  pda.rs
docs/: VISION.md
