[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/logging",
    "crates/erasure",
    "crates/keystore",
    "crates/settings",
    "crates/app",
    "crates/network",
    "crates/ipc",
    "crates/identity",
    "crates/settlement",
    "crates/prover-guest-types",
    "crates/prover",
    "crates/aggregator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Craftec"]
license = "MIT"

[workspace.dependencies]
# Internal crates
craftec-core = { path = "crates/core" }
craftec-crypto = { path = "crates/crypto" }
craftec-logging = { path = "crates/logging" }
craftec-erasure = { path = "crates/erasure" }
craftec-keystore = { path = "crates/keystore" }
craftec-settings = { path = "crates/settings" }
craftec-app = { path = "crates/app" }
craftec-network = { path = "crates/network" }
craftec-ipc = { path = "crates/ipc" }
craftec-identity = { path = "crates/identity" }
craftec-settlement = { path = "crates/settlement" }
craftec-prover-guest-types = { path = "crates/prover-guest-types" }
craftec-prover = { path = "crates/prover" }
craftec-aggregator = { path = "crates/aggregator" }

# Async
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"

# P2P
libp2p = { version = "0.56", features = [
    "tokio",
    "dns",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "identify",
    "relay",
    "dcutr",
    "macros",
    "request-response",
    "mdns",
    "rendezvous",
    "gossipsub",
    "autonat",
] }
libp2p-stream = "0.4.0-alpha"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Erasure coding
reed-solomon-erasure = "6.0"

# Utils
hex = "0.4"

[profile.release]
overflow-checks = true
