[package]
name = "craftec-agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmtime = "29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = "1"
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wat = "1"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
