[package]
name = "craftec-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftec-logging = { workspace = true }
craftec-keystore = { workspace = true }
craftec-settings = { workspace = true }
craftec-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
