[package]
name = "craftec-erasure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reed-solomon-erasure = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
