[package]
name = "craftec-erasure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
blake3 = "1.5"

[dev-dependencies]
serde_json = { workspace = true }
