[package]
name = "craftec-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dependencies.tokio-tungstenite]
version = "0.24"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[features]
default = []
websocket = ["dep:tokio-tungstenite", "dep:futures"]
